# IsingMC

./: CMakeLists.txt  IsingMC.cpp  README.md  c.sh  myClass.h
